# bettercamp

./: .gitignore  Makefile  README.md  SETUP.md  docker-compose.yml  install.ps1  install.sh  osrm-build.ps1  pyproject.toml  run.ps1  run.sh
api/: pyproject.toml
api/app/: main.py  osrm.py
api/app/routes/: establishments.py  health.py  search.py  sectors.py  sites.py
api/tests/: test_smoke.py
docs/superpowers/specs/: 2026-06-21-bettercamp-design.md
osrm/: .gitignore  build.sh
scraper/: pyproject.toml
scraper/sepaq/: __init__.py  __main__.py  enrich.py  establishment.py  http.py  icons.py  sector.py  seed.py  site.py  upsert.py
scraper/tests/: test_parsers.py
shared/: pyproject.toml
shared/bettercamp_shared/: __init__.py  amenities.py  db.py  models.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.js  App.tsx  main.js  main.tsx  styles.css
web/src/api/: client.js  client.ts  types.ts
web/src/components/: EstablishmentTooltip.tsx  FilterPanel.js  FilterPanel.tsx  HealthBanner.js  HealthBanner.tsx  Map.js  Map.tsx  MapDotOverlay.tsx  SectorTooltip.js  SectorTooltip.tsx
web/src/hooks/: useSearchParams.js  useSearchParams.ts
web/src/lib/: aggregate.ts
web/src/routes/: EstablishmentView.js  EstablishmentView.tsx  ListView.js  ListView.tsx  MapView.js  MapView.tsx  SectorView.js  SectorView.tsx  SiteView.js  SiteView.tsx
