[project]
name = "bettercamp-scraper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "sqlmodel>=0.0.22",
    "tenacity>=8.5",
    "bettercamp-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sepaq"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
