[project]
name = "bettercamp-shared"
version = "0.1.0"
description = "Shared data models and DB helpers"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.22",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bettercamp_shared"]
